add httpclient and fetch random photo from Unsplash api

--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,1 +1,7 @@
-<p>photo works!</p>
+
+<div class="container">
+    <div>
+    <button (click)="searchPhoto()"> Search</button>
+    </div>
+    <img *ngIf="urls" src = {{urls.regular}}/>
+</div>
