--- a/src/app/photo/photo.component.css
+++ b/src/app/photo/photo.component.css
@@ -1,7 +1,14 @@
-.container {
-  display: flex;
-}
 .container img {
   height: 300px;
   width: 500px;
+  margin-top: 20px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container button {
+  height: 40px;
+  width: 200px;
 }
